Lower expand truncate limit; Fix truncated text to wrap properly

--- a/src/components/expandable/style.css
+++ b/src/components/expandable/style.css
@@ -1,5 +1,11 @@
 .payload {
   overflow: hidden;
+  line-height: 1em;
+  white-space: pre-line;
+  display: inline-block;
+  padding: 0 0 0 12px;
+  vertical-align: middle;
+  opacity: 0.7;
 }
 
 .payload a {
